ci(monorepo): fix github release & npm deploy steps in ci pipeline

--- a/nx.json
+++ b/nx.json
@@ -23,12 +23,15 @@
     }
   },
   "defaultBase": "main",
+  "pluginsConfig": {
+    "@nx/js": {
+      "analyzeSourceFiles": true
+    }
+  },
   "targetDefaults": {
     "test": {
       "inputs": ["default", "^default", "{workspaceRoot}/jest.preset.js"]
-    }
-  },
-  "targetDependencies": {
+    },
     "version": [
       {
         "target": "version",
