--- a/packages/analytics-js-integrations/project.json
+++ b/packages/analytics-js-integrations/project.json
@@ -79,6 +79,8 @@
       "executor": "@jscutlery/semver:github",
       "options": {
         "tag": "@rudderstack/analytics-js-integrations@3.0.0-beta.9",
+        "title": "@rudderstack/analytics-js-integrations@3.0.0-beta.9",
+        "discussion-category": "@rudderstack/analytics-js-integrations@3.0.0-beta.9",
         "notesFile": "./packages/analytics-js-integrations/CHANGELOG_LATEST.md"
       }
     }
