--- a/packages/analytics-js-plugins/project.json
+++ b/packages/analytics-js-plugins/project.json
@@ -104,6 +104,8 @@
       "executor": "@jscutlery/semver:github",
       "options": {
         "tag": "@rudderstack/analytics-js-plugins@3.0.0-beta.8",
+        "title": "@rudderstack/analytics-js-plugins@3.0.0-beta.8",
+        "discussion-category": "@rudderstack/analytics-js-plugins@3.0.0-beta.8",
         "notesFile": "./packages/analytics-js-plugins/CHANGELOG_LATEST.md"
       }
     },
