--- a/packages/analytics-js-service-worker/project.json
+++ b/packages/analytics-js-service-worker/project.json
@@ -79,6 +79,8 @@
       "executor": "@jscutlery/semver:github",
       "options": {
         "tag": "@rudderstack/analytics-js-service-worker@3.0.0-beta.8",
+        "title": "rudderstack/analytics-js-service-worker@3.0.0-beta.8",
+        "discussion-category": "rudderstack/analytics-js-service-worker@3.0.0-beta.8",
         "notesFile": "./packages/analytics-js-service-worker/CHANGELOG_LATEST.md"
       }
     },
