--- a/packages/analytics-v1.1/project.json
+++ b/packages/analytics-v1.1/project.json
@@ -98,6 +98,8 @@
       "executor": "@jscutlery/semver:github",
       "options": {
         "tag": "rudder-sdk-js@2.42.1",
+        "title": "rudder-sdk-js@2.42.1",
+        "discussion-category": "rudder-sdk-js@2.42.1",
         "notesFile": "./packages/analytics-v1.1/CHANGELOG_LATEST.md"
       }
     },
