--- a/packages/loading-scripts/project.json
+++ b/packages/loading-scripts/project.json
@@ -67,6 +67,8 @@
       "executor": "@jscutlery/semver:github",
       "options": {
         "tag": "@rudderstack/analytics-js-loading-scripts@3.0.0-beta.8",
+        "title": "@rudderstack/analytics-js-loading-scripts@3.0.0-beta.8",
+        "discussion-category": "@rudderstack/analytics-js-loading-scripts@3.0.0-beta.8",
         "notesFile": "./packages/loading-scripts/CHANGELOG_LATEST.md"
       }
     }
