chore(monorepo): set scope in chore messages in github actions

--- a/.github/workflows/draft-new-release-v3.yml
+++ b/.github/workflows/draft-new-release-v3.yml
@@ -83,8 +83,10 @@ jobs:
           ./scripts/generate-last-release-changelog.sh
           npm run bump-version:monorepo
           npx replace $CURRENT_VERSION_VALUE $NEW_VERSION_VALUE sonar-project.properties
+          npm run clean
+          npm run setup
           git add .
-          git commit -m "chore: sync versions and generate release logs" -n
+          git commit -m "chore(monorepo): sync versions and generate release logs" -n
 
       - name: Push new version in release branch
         run: |
