--- a/packages/sanity-suite/project.json
+++ b/packages/sanity-suite/project.json
@@ -2,8 +2,8 @@
   "name": "@rudderstack/analytics-js-sanity-suite",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/sanity-suite/src",
-  "projectType": "library",
-  "tags": [],
+  "projectType": "application",
+  "tags": ["type:app", "scope:sanity"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
