--- a/packages/analytics-js-common/project.json
+++ b/packages/analytics-js-common/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/analytics-js-common/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["type:lib", "scope:common"],
   "targets": {
     "build": {
       "executor": "nx:run-script",
