--- a/packages/analytics-js-plugins/project.json
+++ b/packages/analytics-js-plugins/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/analytics-js-plugins/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["type:lib", "scope:plugins"],
   "targets": {
     "start": {
       "executor": "nx:run-script",
