--- a/packages/analytics-js-common/package.json
+++ b/packages/analytics-js-common/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@rudderstack/analytics-js-common",
   "version": "3.0.0-beta.9",
+  "private": true,
   "description": "RudderStack Javascript SDK common code",
   "module": "dist/npm/index.js",
   "types": "./dist/npm/index.d.ts",
-  "publishConfig": {
-    "access": "public"
-  },
+  "publishConfig": {},
   "files": [
     "dist/npm",
     "LICENSE",
@@ -40,8 +39,8 @@
     "build:package": "npm run build:npm:modern",
     "test": "nx test --maxWorkers=50%",
     "test:ci": "nx test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
-    "check:lint:dev": "eslint --ext .js,.ts src",
-    "check:lint": "eslint --ext .js,.ts src -f json -o reports/eslint.json || exit 0",
+    "check:lint": "nx lint",
+    "check:lint:ci": "nx lint --configuration=ci",
     "check:size:build": "npm run build",
     "check:size": "npm run check:size:build && size-limit",
     "check:size:json": "size-limit --json",
@@ -58,7 +57,7 @@
   "dependencies": {
     "@lukeed/uuid": "2.0.1",
     "@ndhoule/defaults": "2.0.1",
-    "@preact/signals-core": "1.4.0",
+    "@preact/signals-core": "1.5.0",
     "@segment/top-domain": "3.0.1",
     "crypto-js": "4.1.1",
     "get-value": "3.0.1",
