--- a/packages/analytics-js-common/project.json
+++ b/packages/analytics-js-common/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/analytics-js-common/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["type:lib", "scope:common"],
   "targets": {
     "build": {
       "executor": "nx:run-script",
@@ -65,6 +65,24 @@
         }
       }
     },
+    "lint": {
+      "executor": "@nx/linter:eslint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "hasTypeAwareRules": true,
+        "lintFilePatterns": [
+          "packages/analytics-js-common/src/**/*.{ts,js}",
+          "packages/analytics-js-common/{package,project}.json"
+        ]
+      },
+      "configurations": {
+        "ci": {
+          "force": true,
+          "outputFile": "packages/analytics-js-common/reports/eslint.json",
+          "format": "json"
+        }
+      }
+    },
     "version": {
       "executor": "@jscutlery/semver:version",
       "options": {
@@ -83,14 +101,6 @@
         "title": "@rudderstack/analytics-js-common@3.0.0-beta.9",
         "discussion-category": "@rudderstack/analytics-js-common@3.0.0-beta.9",
         "notesFile": "./packages/analytics-js-common/CHANGELOG_LATEST.md"
-      }
-    },
-    "deploy": {
-      "executor": "ngx-deploy-npm:deploy",
-      "options": {
-        "access": "public",
-        "distFolderPath": "packages/analytics-js-common",
-        "noBuild": true
       }
     }
   }
