--- a/packages/analytics-js-integrations/project.json
+++ b/packages/analytics-js-integrations/project.json
@@ -3,7 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/analytics-js-integrations/src",
   "projectType": "library",
-  "tags": [],
+  "tags": ["type:sdk", "scope:integrations"],
   "targets": {
     "start": {
       "executor": "nx:run-script",
@@ -61,6 +61,24 @@
         "ci": {
           "ci": true,
           "codeCoverage": true
+        }
+      }
+    },
+    "lint": {
+      "executor": "@nx/linter:eslint",
+      "outputs": ["{options.outputFile}"],
+      "options": {
+        "hasTypeAwareRules": true,
+        "lintFilePatterns": [
+          "packages/analytics-js-integrations/src/**/*.{ts,js}",
+          "packages/analytics-js-integrations/{package,project}.json"
+        ]
+      },
+      "configurations": {
+        "ci": {
+          "force": true,
+          "outputFile": "packages/analytics-js-integrations/reports/eslint.json",
+          "format": "json"
         }
       }
     },
