--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -40,8 +40,8 @@
     "build:package": "npm run build:npm:modern",
     "test": "nx test --maxWorkers=50%",
     "test:ci": "nx test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
-    "check:lint:dev": "eslint --ext .js,.ts src",
-    "check:lint": "eslint --ext .js,.ts src -f json -o reports/eslint.json || exit 0",
+    "check:lint": "nx lint",
+    "check:lint:ci": "nx lint --configuration=ci",
     "check:size:build": "npm run build:package",
     "check:size": "npm run check:size:build && size-limit",
     "check:size:json": "size-limit --json",
@@ -60,7 +60,7 @@
     "@lukeed/uuid": "2.0.1",
     "@segment/loosely-validate-event": "2.0.0",
     "@vespaiach/axios-fetch-adapter": "0.3.1",
-    "assert": "2.0.0",
+    "assert": "2.1.0",
     "axios": "0.27.2",
     "axios-retry": "3.7.0",
     "lodash.clonedeep": "4.5.0",
