--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -54,8 +54,8 @@
     "build:browser:test": "ONLY_IIFE=true npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/cdn/legacy/iife/rsa.min.js > __mocks__/cdnSDKv3.js",
     "test": "npm run build:browser:test && nx test --maxWorkers=50%",
     "test:ci": "npm run build:browser:test && nx test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
-    "check:lint:dev": "eslint --ext .js,.ts src",
-    "check:lint": "eslint --ext .js,.ts src -f json -o reports/eslint.json || exit 0",
+    "check:lint": "nx lint",
+    "check:lint:ci": "nx lint --configuration=ci",
     "check:size:build": "npm run build:browser && npm run build:browser:modern && npm run build:package",
     "check:size": "npm run check:size:build && size-limit",
     "check:size:json": "size-limit --json",
@@ -68,15 +68,14 @@
     "package": "npm pack",
     "release": "npm publish"
   },
-  "dependencies": {
+  "devDependencies": {
     "@lukeed/uuid": "2.0.1",
-    "@preact/signals-core": "1.4.0",
-    "@rudderstack/analytics-js-common": "3.0.0-beta.9",
-    "@rudderstack/analytics-js-plugins": "3.0.0-beta.9",
+    "@preact/signals-core": "1.5.0",
+    "@rudderstack/analytics-js-common": "*",
+    "@rudderstack/analytics-js-plugins": "*",
     "ramda": "0.29.0",
     "storejs": "2.0.6"
   },
-  "devDependencies": {},
   "browserslist": {
     "production": [
       "defaults",
@@ -96,5 +95,6 @@
       "last 1 edge version",
       "last 1 safari version"
     ]
-  }
+  },
+  "dependencies": {}
 }
