feat: optimize plugin chunks (#1379)
* chore: remove unnecessary APIs from schedule class

* fix: use crypto-es instead of crypto-js

* chore: remove css code from @originjs/vite-plugin-federation patch

* refactor(analytics-js-plugins): sample rollup config for merging chunks

* refactor: split log messages into individual plugins

* chore(deps): use exact version of the package

* chore(analytics-js-plugins): organize shared chunks as per use cases

* feat: use retry queue for beacon plugin

* feat: further reduce chunks and dependencies

* refactor: revert unnecessary change

* fix: configure max items correctly

* refactor: rename constant and set proper default

* fix: add batch payload size calculator callback

* refactor: minor code improvements

* refactor: sanitize code for maintainability

* refactor: clear other queue

* refactor: reuse queue types

* feat: cap the batch size

* fix: queue options type

* fix: add batch enabled option

* refactor: address code smells

* feat: use local storage for beacon plugin

---------

Co-authored-by: George Bardis <gbardis@rudderstack.com>
Co-authored-by: George Bardis <109069547+bardisg@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "component-emitter": "1.3.0",
     "component-querystring": "2.0.1",
     "component-url": "0.2.1",
+    "crypto-es": "2.0.4",
     "crypto-js": "4.1.1",
     "deep-object-diff": "1.1.9",
     "get-value": "3.0.1",
