ci(analytics-js): fix analytics bundled build and package exports

--- a/.github/workflows/deploy-staging-v3.yml
+++ b/.github/workflows/deploy-staging-v3.yml
@@ -64,8 +64,7 @@ jobs:
           BUGSNAG_RELEASE_STAGE: 'development'
           BUNDLED_PLUGINS: 'StorageEncryptionLegacy,XhrQueue'
         run: |
-          nx run @rudderstack/analytics-js:build-browser
-          nx run @rudderstack/analytics-js:build-browser-modern
+          npm run build:browser:LH
 
       - name: Sync files to S3 v1.1 staging folder
         run: |
