fix(analytics-js-plugins): add IE11 compatibility for crypto-es

--- a/.prettierignore
+++ b/.prettierignore
@@ -12,3 +12,4 @@ CONTRIBUTING.md
 examples/chrome-extension/**/rudderAnalytics.js
 examples/chrome-extension/**/foreground.js
 examples/**/index.html
+**/public/index.html
