test(analytics-js-sanity-suite): update sourceConfig expected response

--- a/packages/sanity-suite/__fixtures__/sourceConfig1.json
+++ b/packages/sanity-suite/__fixtures__/sourceConfig1.json
@@ -51,16 +51,6 @@
           "trackProductsOnce": false,
           "trackRevenuePerProduct": false,
           "preferAnonymousIdForDeviceId": false,
-          "deviceIdFromUrlParam": false,
-          "forceHttps": false,
-          "trackGclid": true,
-          "trackReferrer": true,
-          "saveParamsReferrerOncePerSession": true,
-          "trackUtmProperties": true,
-          "unsetParamsReferrerOnNewSession": false,
-          "batchEvents": false,
-          "eventUploadPeriodMillis": "30000",
-          "eventUploadThreshold": "30",
           "versionName": "",
           "blacklistedEvents": [
             {
@@ -79,7 +69,11 @@
           ],
           "eventFilteringOption": "disable",
           "mapDeviceBrand": false,
-          "residencyServer": "standard"
+          "residencyServer": "standard",
+          "attribution": false,
+          "eventUploadThreshold": "1",
+          "eventUploadPeriodMillis": "0",
+          "trackNewCampaigns": true
         },
         "liveEventsConfig": {
           "eventDelivery": false,
@@ -91,7 +85,7 @@
           "name": "AM",
           "displayName": "Amplitude",
           "createdAt": "2019-09-02T08:08:05.613Z",
-          "updatedAt": "2023-08-22T09:11:50.360Z",
+          "updatedAt": "2023-10-03T10:41:25.398Z",
           "config": {
             "destConfig": {
               "ios": [
@@ -106,16 +100,10 @@
                 "useNativeSDK",
                 "connectionMode",
                 "preferAnonymousIdForDeviceId",
-                "deviceIdFromUrlParam",
-                "forceHttps",
-                "trackGclid",
-                "trackReferrer",
-                "saveParamsReferrerOncePerSession",
-                "trackUtmProperties",
-                "unsetParamsReferrerOnNewSession",
-                "batchEvents",
+                "attribution",
+                "eventUploadThreshold",
                 "eventUploadPeriodMillis",
-                "eventUploadThreshold"
+                "trackNewCampaigns"
               ],
               "android": [
                 "eventUploadPeriodMillis",
@@ -187,16 +175,6 @@
               "trackProductsOnce",
               "trackRevenuePerProduct",
               "preferAnonymousIdForDeviceId",
-              "deviceIdFromUrlParam",
-              "forceHttps",
-              "trackGclid",
-              "trackReferrer",
-              "saveParamsReferrerOncePerSession",
-              "trackUtmProperties",
-              "unsetParamsReferrerOnNewSession",
-              "batchEvents",
-              "eventUploadPeriodMillis",
-              "eventUploadThreshold",
               "versionName",
               "enableLocationListening",
               "useAdvertisingIdForDeviceId",
@@ -207,7 +185,13 @@
               "oneTrustCookieCategories",
               "eventFilteringOption",
               "mapDeviceBrand",
-              "residencyServer"
+              "residencyServer",
+              "userProvidedPageEventString",
+              "useUserDefinedPageEventName",
+              "attribution",
+              "eventUploadThreshold",
+              "eventUploadPeriodMillis",
+              "trackNewCampaigns"
             ],
             "transformAt": "processor",
             "transformAtV1": "processor",
@@ -242,9 +226,9 @@
         },
         "deleted": false,
         "createdAt": "2023-02-01T10:32:02.827Z",
-        "updatedAt": "2023-07-20T11:00:26.508Z",
+        "updatedAt": "2023-10-03T13:35:52.574Z",
         "workspaceId": "2L8FgwnU8Q4I4nQbdqmin8uP5n8",
-        "revisionId": "2SpkI8aXYzZXS5DSlkYC51sWl5Y",
+        "revisionId": "2WFtS9yqg1Tlm0upun7pdT0MzHj",
         "secretConfig": {},
         "secretVersion": 17,
         "shouldApplyDeviceModeTransformation": false,
@@ -272,6 +256,11 @@
           "useNativeSDKToSend": false,
           "eventFilteringOption": "disable",
           "extendPageViewParams": false,
+          "piiPropertiesToIgnore": [
+            {
+              "piiProperty": ""
+            }
+          ],
           "oneTrustCookieCategories": [],
           "overrideClientAndSessionId": true
         },
@@ -285,7 +274,7 @@
           "name": "GA4",
           "displayName": "Google Analytics 4 (GA4)",
           "createdAt": "2020-12-31T10:32:41.062Z",
-          "updatedAt": "2023-08-08T13:06:15.508Z",
+          "updatedAt": "2023-10-03T10:41:22.118Z",
           "config": {
             "destConfig": {
               "ios": ["useNativeSDK", "connectionMode"],
@@ -316,6 +305,7 @@
                 "whitelistedEvents",
                 "blacklistedEvents",
                 "eventFilteringOption",
+                "piiPropertiesToIgnore",
                 "oneTrustCookieCategories"
               ]
             },
@@ -331,6 +321,7 @@
               "useNativeSDKToSend",
               "eventFilteringOption",
               "extendPageViewParams",
+              "piiPropertiesToIgnore",
               "oneTrustCookieCategories",
               "overrideClientAndSessionId"
             ],
@@ -370,9 +361,9 @@
         },
         "deleted": false,
         "createdAt": "2023-02-16T08:13:54.021Z",
-        "updatedAt": "2023-08-07T05:56:40.704Z",
+        "updatedAt": "2023-09-30T07:01:03.925Z",
         "workspaceId": "2L8FgwnU8Q4I4nQbdqmin8uP5n8",
-        "revisionId": "2TdzZR3Y82hrLFmbFyrZHcyv89S",
+        "revisionId": "2W6e4BbCxrlY2Hl80zyYM7PNNNl",
         "secretConfig": {},
         "secretVersion": 10,
         "shouldApplyDeviceModeTransformation": false,
@@ -1004,5 +995,6 @@
     ],
     "deleted": false,
     "transient": false
-  }
+  },
+  "updatedAt": "2023-10-06T07:22:05.366Z"
 }
