ci(monorepo): use self hosted github runner

--- a/.github/workflows/deploy-sanity-suite.yml
+++ b/.github/workflows/deploy-sanity-suite.yml
@@ -21,7 +21,8 @@ env:
 jobs:
   deploy-tag:
     name: Deploy Sanity Suite
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64]
+
     steps:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
