--- a/.github/workflows/publish-new-release-v3.yml
+++ b/.github/workflows/publish-new-release-v3.yml
@@ -13,8 +13,9 @@ env:
 jobs:
   release:
     name: Publish new release v3
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64]
     if: (startsWith(github.event.pull_request.head.ref, 'v3-release/') || startsWith(github.event.pull_request.head.ref, 'v3-hotfix-release/')) && github.event.pull_request.merged == true # only merged pull requests must trigger this job
+
     steps:
       - name: Extract version from branch name (for release branches)
         id: extract-version
