--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   build:
     name: 'Unit Tests, Coverage & Sonar v3'
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, Linux, X64]
 
     steps:
       - name: Checkout
