--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -21,7 +21,7 @@ jobs:
         uses: docker/login-action@v2.1.0
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PROD_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Setup Node
         uses: actions/setup-node@v3
