--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -9,27 +9,12 @@
       "types": "./dist/npm/index.d.ts",
       "import": "./dist/npm/index.es.js",
       "require": "./dist/npm/index.js"
-    },
-    "./service-worker": {
-      "types": "./dist/npm/service-worker/index.d.ts",
-      "import": "./dist/npm/service-worker/index.es.js",
-      "require": "./dist/npm/service-worker/index.js"
-    },
-    "./service-worker/index.es": {
-      "types": "./dist/npm/service-worker/index.d.ts",
-      "import": "./dist/npm/service-worker/index.es.js"
     }
   },
   "typesVersions": {
     "*": {
       ".": [
         "dist/npm/index.d.ts"
-      ],
-      "service-worker": [
-        "dist/npm/service-worker/index.d.ts"
-      ],
-      "service-worker/index.es": [
-        "dist/npm/service-worker/index.d.ts"
       ]
     }
   },
@@ -49,8 +34,7 @@
     "build:browser:modern": "BROWSERSLIST_ENV=modern rollup --config rollup-configs/rollup.sdk.browser.mjs --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,ENV:prod",
     "build:browser": "rollup --config rollup-configs/rollup.sdk.browser.mjs --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,ENV:prod",
     "build:npm": "rollup --config rollup-configs/rollup.sdk.npm.mjs --environment VERSION:$npm_package_version,UGLIFY,ENV:prod,NPM",
-    "build:worker": "rollup --config rollup-configs/rollup.worker.config.mjs --environment VERSION:$npm_package_version,UGLIFY,ENV:prod,NPM",
-    "build:package": "npm run build:npm && npm run build:worker",
+    "build:package": "npm run build:npm",
     "build:browser:test": "npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/cdn/legacy/rudder-analytics.min.js > __mocks__/cdnSDK.js",
     "test": "npm run build:browser:test && nx test --maxWorkers=50%",
     "test:ci": "npm run build:browser:test && nx test --parallel=false --configuration=ci --runInBand --maxWorkers=1 --forceExit",
