--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -14,19 +14,13 @@ env:
 jobs:
   build:
     name: 'Unit Tests, Coverage & Sonar v3'
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v3.0.0
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Setup Node
         uses: actions/setup-node@v3
