--- a/.github/workflows/test-v3.yml
+++ b/.github/workflows/test-v3.yml
@@ -51,3 +51,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Upload report to github build
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: report
+          path: packages/analytics-js-integrations/reports
