chore(monorepo): use default github runner for deployments

--- a/.github/workflows/deploy-dev-v3.yml
+++ b/.github/workflows/deploy-dev-v3.yml
@@ -17,7 +17,7 @@ env:
 jobs:
   deploy-tag:
     name: Deploy to DEV v3
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v') || startsWith(github.ref, 'refs/heads/v3-hotfix/') || startsWith(github.ref, 'refs/heads/develop/') || github.event.pull_request.merged == true
 
     steps:
