--- a/.github/workflows/deploy-sanity-suite.yml
+++ b/.github/workflows/deploy-sanity-suite.yml
@@ -21,7 +21,7 @@ env:
 jobs:
   deploy-tag:
     name: Deploy Sanity Suite
-    runs-on: [self-hosted, Linux, X64]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Configure AWS Credentials
